[package]
name = "polybar-newsapi"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
serde_json = "1.0"